--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "io.ionic.starter",
-	"appName": "vue-first-app",
-	"webDir": "dist",
-	"bundledWebRuntime": false
+  "appId": "com.netlify5595.netlify",
+  "appName": "VueMemories",
+  "webDir": "dist",
+  "bundledWebRuntime": false
 }
