--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^3.1.1",
     "@capacitor/app": "1.0.2",
+    "@capacitor/camera": "^1.0.3",
     "@capacitor/core": "3.1.1",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
