--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "com.netlify5595.netlify",
 	"appName": "VueMemories",
-	"webDir": "public",
+	"webDir": "dist",
 	"bundledWebRuntime": false
 }
